--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
   <head>
     <title>Bird Life in Singapore</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhNYQ4PLT3Nub9w8g9lsQINCBp5r7cSc"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=INSERT_KEY"></script>
     <script>
       var map;
       var markers = [];
